# VItA

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  VItA_install_dependencies  dependencies.cmake
constrains/: AbstractConstraintFunction.h  ConstantConstraintFunction.h  ConstantPiecewiseConstraintFunction.h  bloodViscosity.h  potentialLaw.h  symmetryLaw.h
core/: FRRSTreeGenerator.cpp  FRRSTreeGenerator.h  FixedPerfusionRadiusTreeGenerator.cpp  FixedPerfusionRadiusTreeGenerator.h  GeneratorData.cpp  GeneratorData.h  GeneratorDataMonitor.cpp  GeneratorDataMonitor.h  StagedFRROTreeGenerator.cpp  StagedFRROTreeGenerator.h  StagedFRRSTreeGenerator.cpp  StagedFRRSTreeGenerator.h  StagedFixedPerfusionRadiusTreeGenerator.cpp  StagedFixedPerfusionRadiusTreeGenerator.h  TreeMerger.cpp  TreeMerger.h
creators/: AbstractCreator.cpp  AbstractCreator.h  CylinderCreator.cpp  CylinderCreator.h  ParallelepipedCreator.cpp  ParallelepipedCreator.h  SphereCreator.cpp  SphereCreator.h
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_012082633e418c4ae7fc1355f9949bd8.html  dir_04508c4eaf5378657c48bfc594d8f34c.html  dir_177d9df9100f9aec3c20aa9ab78b2335.html  dir_1c5fc0952d08ab7bc2aafa5be3cd4c71.html  dir_1d88858431cab2fe8d058b07624e4d41.html  dir_20fdf3e7e63707b85286be54949a9afc.html  dir_262a6126b453da7decc2ac89c4cb94c2.html  dir_41bcf8ed15f9e28dd9eaa2b9d346bc00.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_434c96eef965f5e2d34a4690253479e4.html  dir_44e6750c3ba91f897faed10628147690.html  dir_53693ff3079007f03ff22fab516593dd.html  dir_559365b0a56fe523da7e3acb0dd73fb8.html  dir_5c713dcde9ea04c34ab67b1a07a9bb36.html  dir_5cf9ee26534c27d340f5831514637e47.html  dir_6abe09ce516b7af5caa1868b1aed784e.html  dir_6c18041bb7fd8eb9503d6b1620d4a907.html  dir_6c903d7058bbca7cee8a4551c7ce4adf.html  dir_721455d5675a16866a78c81c65640e3a.html  dir_841ee82dd7d5770b4fdd22fff1695898.html  dir_888a863a62a112491dab7c50fe53e275.html  dir_91e628a3b5671db2266ab48bed89f087.html  dir_92709420fde8ca446636ff7c23065e8b.html  dir_984a69203757f03ab9bdfb7a846a973d.html  dir_990140f929451ed918ae44b030dc1d7d.html  dir_a2a5b97680f4688c5edec2038dd4832f.html  dir_a4b60f1befb85b359fd59b9e79ff8397.html  dir_a6d9c878aacd38250838f1cb046a6fb1.html  dir_bc161955dc3a3d2485839eba21420d01.html  dir_bf759eca3ada58fb2c4bdae183e838e4.html  dir_c5402f31853b50ed6f04a3b62db9be11.html  dir_c63910e8b5f57da1fa8473fb4c058a77.html  dir_c9e20c30cf5906fba8f787a8f1a04eec.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_e00405b914c98964fe21366e179c9593.html  dir_e35cf43deb336e411903d2ccae3b7edc.html  dir_f0d15858eee0a2d71af0b3fece619980.html  (+75 more)
doc/latex/: annotated.tex  class_abstract_c_c_o_tree.eps  class_abstract_c_c_o_tree.tex  class_abstract_c_c_o_tree_generator.tex  class_abstract_creator.eps  class_abstract_creator.tex  class_abstract_domain.eps  class_abstract_domain.tex  class_abstract_stat_manipulator.eps  class_abstract_stat_manipulator.tex  class_cylinder_creator.tex  class_domain_n_v_r.eps  class_domain_n_v_r.tex  class_dummy_domain.eps  class_dummy_domain.tex  class_fixed_perfusion_radius_tree_generator.tex  class_fixed_radius_root_c_c_o_tree_legacy.eps  class_fixed_radius_root_c_c_o_tree_legacy.tex  class_fixed_radius_root_variable_viscosity_c_c_o_tree.tex  class_mean_diameter_stat_manipulator.tex  class_parallelepiped_creator.eps  class_parallelepiped_creator.tex  class_simple_domain.eps  class_simple_domain.tex  class_simple_domain2_d.eps  class_simple_domain2_d.tex  class_sphere_creator.eps  class_sphere_creator.tex  class_std_diameter_stat_manipulator.eps  class_std_diameter_stat_manipulator.tex  class_tree_index_creator.tex  dir_012082633e418c4ae7fc1355f9949bd8.tex  dir_04508c4eaf5378657c48bfc594d8f34c.tex  dir_177d9df9100f9aec3c20aa9ab78b2335.tex  dir_1c5fc0952d08ab7bc2aafa5be3cd4c71.tex  dir_1d88858431cab2fe8d058b07624e4d41.tex  dir_20fdf3e7e63707b85286be54949a9afc.tex  dir_262a6126b453da7decc2ac89c4cb94c2.tex  dir_41bcf8ed15f9e28dd9eaa2b9d346bc00.tex  dir_4270bfced15e0e73154b13468c7c9ad9.tex  (+33 more)
filters/: AbstractVesselFilter.cpp  AbstractVesselFilter.h  VesselFilterByBranchingMode.cpp  VesselFilterByBranchingMode.h  VesselFilterByStage.cpp  VesselFilterByStage.h  VesselFilterComposite.cpp  VesselFilterComposite.h
io/: CSVWriter.cpp  CSVWriter.h  EXFTreeWriter.cpp  EXFTreeWriter.h  StagedFRROTreeGeneratorLogger.cpp  StagedFRROTreeGeneratorLogger.h  VTKConverter.cpp  VTKConverter.h  VTKObjectTreeElementalWriter.cpp  VTKObjectTreeElementalWriter.h  VTKObjectTreeNodalWriter.cpp  VTKObjectTreeNodalWriter.h  VTKObjectTreeSplinesNodalWriter.cpp  VTKObjectTreeSplinesNodalWriter.h  VTKObjectTreeStrahlerWriter.cpp  VTKObjectTreeStrahlerWriter.h  VTKObjectTreeWriter.cpp  VTKObjectTreeWriter.h
io/task/: AbstractSavingTask.cpp  AbstractSavingTask.h  CheckpointSavingTask.cpp  CheckpointSavingTask.h  VisualizationSavingTask.cpp  VisualizationSavingTask.h
stats/: AbstractStatManipulator.cpp  AbstractStatManipulator.h  MeanStatManipulator.cpp  MeanStatManipulator.h  ObjectTreeIndexCreator.cpp  ObjectTreeIndexCreator.h  ObjectTreeStatsManager.cpp  ObjectTreeStatsManager.h  PercentileStatManipulator.cpp  PercentileStatManipulator.h  StdStatManipulator.cpp  StdStatManipulator.h  StructuredTreeIndexCreator.cpp  StructuredTreeIndexCreator.h  StructuredTreeStatsManager.cpp  StructuredTreeStatsManager.h  TreeIndexCreator.cpp  TreeIndexCreator.h  TreeStatsManager.cpp  TreeStatsManager.h  VesselHandler.cpp  VesselHandler.h  VesselObjectHandler.cpp  VesselObjectHandler.h  VesselStructHandler.cpp  VesselStructHandler.h
stats/manipulators/: Abstract0DStatManipulator.cpp  Abstract0DStatManipulator.h  Abstract1DStatManipulator.cpp  Abstract1DStatManipulator.h  AbstractStructuredStatManipulator.cpp  AbstractStructuredStatManipulator.h  MeanStatManipulator.cpp  MeanStatManipulator.h  MeanStructStatManipulator.cpp  MeanStructStatManipulator.h  PercentileStatManipulator.cpp  PercentileStatManipulator.h  SeriesStatManipulator.cpp  (+7 more)
structures/: CCOCommonStructures.h
utils/: MemoryMonitor.cpp  MemoryMonitor.h
(+487 files in other folders)
